@@ -19,6 +19,7 @@ requires 'Error::Pure' => 0.22;
 requires 'File::Basename' => 0;
 requires 'File::Spec::Functions' => 0;
 requires 'Image::Random' => 0.06;
+requires 'Readonly' => 0;
 requires 'Video::Delay::Const' => 0;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
