@@ -2,10 +2,12 @@ TODO
 ====
 2. Pridat funkcni testy.
 3. Do _symlink udelat kontroly na provedeni.
-4. Support for duration in form 100ms, 1s
 5.
 
 Applied
 =======
 1. Testy.
 OK [20141103] skim
+
+4. Support for duration in form 100ms, 1s
+OK [20150916] skim
