@@ -1,4 +1,5 @@
 0.07
+ - Improve 'duration' parameter to accept s/ms suffix.
  - Move admin tests to xt/ directory.
 
 0.06 2015-09-15T22:00:51+02:00
